@@ -1,3 +1,4 @@
+* openssl: update to the newest 1.0.2 version
 * updater: Some fixes to the migrator
 * isc-dhcp: Enable failover
 * opkg: Use repo.turris.cz because of certificates
